# fs.datalake

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
src/fs/datalake/: __init__.py  filesystem.py
src/fs/opener/: __init__.py  datalakefs.py
tests/: __init__.py  resources.py  test_doctests.py  test_filesystem.py  test_narrative.rst  test_opener.py  test_package.py  test_resources.py
