[metadata]
name = fs.datalake
version = 1.0.0
description = PythonFilesystem2 extension for Azure Datalake Store gen. 1
long_description = file:README.rst
keywords = Azure Datalake PyFilesystem2
license = MIT
platform = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT license
    Topic :: System :: Filesystems
    Development Status :: 2 - Pre-Alpha
author = Gilles Lenfant
author_email = gilles.lenfant@gmail.com
url = https://github.com/glenfant/fs.datalake

[options]
python_requires = >=3.6
install_requires =
    fs
    azure-datalake-store
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
tests_require =
    python-dotenv

[options.packages.find]
where = src
include = fs.*

[options.extras_require]
testing =
    python-dotenv

[options.entry_points]
fs.opener =
    datalake = fs.opener.datalakefs:DatalakeOpener

[bdist_wheel]
universal = true
